# FaceCheck-PoC

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/facecheckpoc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/facecheckpoc/: FormViewModel.kt  MainActivity.kt  UserFormActivity.kt  UserViewModel.kt
app/src/main/java/com/example/facecheckpoc/data/: InventoryDatabase.kt  OpenCVLoader.kt  UserDao.kt  UserModel.kt  UserRepository.kt
app/src/main/java/com/example/facecheckpoc/utils/: AppUtils.kt
app/src/main/java/com/example/facecheckpoc/verification/: Verification2Fragment.kt  VerificationFragment.kt
app/src/main/res/drawable/: edit_text_border.xml  ic_image.xml  ic_person.xml  rounded_corners.xml  rounded_icon.xml
app/src/main/res/layout/: activity_form_user.xml  activity_main.xml  fragment_verification.xml  fragment_verification2.xml
app/src/main/res/menu/: action_settings.xml
app/src/main/res/raw/: scanning_animation_2.json
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/example/facecheckpoc/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
